--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,9 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.1",
     "react-dom": "^17.0.1",
-    "react-notifications": "^1.7.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-toast-notifications": "^2.4.3",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
